Fix issue with missingness addition

--- a/Auto-Clean_Study.ipynb
+++ b/Auto-Clean_Study.ipynb
@@ -125,28 +125,34 @@
     "            #print('Drop')\n",
     "            noisy = noisy.drop(x, axis=1)\n",
     "            no_noise = no_noise.drop(x, axis=1)\n",
+    "            \n",
+    "    cols_list = no_noise.select_dtypes('number').columns.tolist()\n",
+    "    cols_list.remove('y')\n",
     "\n",
-    "        else:\n",
-    "            n_five = noisy.copy()\n",
-    "            n_ten = noisy.copy()\n",
-    "            n_twentyfive = noisy.copy()\n",
-    "            n_fifty = noisy.copy()\n",
+    "    n_five = noisy.copy()\n",
+    "    n_ten = noisy.copy()\n",
+    "    n_twentyfive = noisy.copy()\n",
+    "    n_fifty = noisy.copy()\n",
     "\n",
+    "    no_five = no_noise.copy()\n",
+    "    no_ten = no_noise.copy()\n",
+    "    no_twentyfive = no_noise.copy()\n",
+    "    no_fifty = no_noise.copy()\n",
+    "\n",
+    "    for x in noisy[cols_list]:\n",
     "            n_five.loc[n_five.sample(frac=0.05).index, x] = np.nan\n",
     "            n_ten.loc[n_ten.sample(frac=0.1).index, x] = np.nan\n",
     "            n_twentyfive.loc[n_twentyfive.sample(frac=0.25).index, x] = np.nan\n",
     "            n_fifty.loc[n_fifty.sample(frac=0.5).index, x] = np.nan\n",
     "\n",
-    "            no_five = no_noise.copy()\n",
-    "            no_ten = no_noise.copy()\n",
-    "            no_twentyfive = no_noise.copy()\n",
-    "            no_fifty = no_noise.copy()\n",
-    "\n",
+    "    for x in no_noise[cols_list]:\n",
     "            no_five.loc[no_five.sample(frac=0.05).index, x] = np.nan\n",
     "            no_ten.loc[no_ten.sample(frac=0.1).index, x] = np.nan\n",
     "            no_twentyfive.loc[no_twentyfive.sample(frac=0.25).index, x] = np.nan\n",
     "            no_fifty.loc[no_fifty.sample(frac=0.5).index, x] = np.nan\n",
     "\n",
+    "    cols_list = no_noise.select_dtypes('number').columns.tolist()\n",
+    "    cols_list.remove('y')\n",
     "    \n",
     "    outstring = './data/DigenStudy/No_Noise/' + i + '/' + i + 'no_missing.csv'\n",
     "    outstring5 = './data/DigenStudy/No_Noise/' + i + '/' + i + 'no_5.csv'\n",
@@ -235,104 +241,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>X0</th>\n",
-       "      <th>X1</th>\n",
-       "      <th>X4</th>\n",
-       "      <th>X6</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>InstanceId</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-2.661530</td>\n",
-       "      <td>0.259523</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.614759</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            X0        X1        X4  X6  y\n",
-       "InstanceId                               \n",
-       "0          NaN       NaN       NaN NaN  0\n",
-       "1          NaN       NaN       NaN NaN  1\n",
-       "2          NaN       NaN       NaN NaN  0\n",
-       "3          NaN -2.661530  0.259523 NaN  0\n",
-       "4          NaN -0.614759       NaN NaN  0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['X0', 'X1', 'X4', 'X6']\n"
+     ]
     }
    ],
    "source": [
     "#Noisy checks:\n",
-    "noisy.head()\n"
+    "noisy.head()\n",
+    "print(cols_list)\n"
    ]
   }
  ],
