added list of cat and quant featrues

--- a/STREAMLINE-GoogleColab.ipynb
+++ b/STREAMLINE-GoogleColab.ipynb
@@ -1121,6 +1121,7 @@
     "                partition_method=partition_method,\n",
     "                ignore_features=ignore_features, \n",
     "                categorical_features=categorical_feature_headers, \n",
+    "                quantitative_features=quantitiative_feature_headers,\n",
     "                top_features=top_features,\n",
     "                categorical_cutoff=categorical_cutoff, sig_cutoff=sig_cutoff,\n",
     "                featureeng_missingness=featureeng_missingness,\n",
