Tested except Legacy runners

--- a/UsefulNotebooks/DecisionThreshold_Interactive.ipynb
+++ b/UsefulNotebooks/DecisionThreshold_Interactive.ipynb
@@ -153,7 +153,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "#Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "primary_metirc = metadata['Primary Metric']\n",
@@ -1332,8 +1332,8 @@
     "test = pd.read_csv(test_file_path)\n",
     "if instance_label != 'None':\n",
     "    test = test.drop(instance_label,axis=1)\n",
-    "x_test = test.drop(class_label,axis=1).values\n",
-    "y_test = test[class_label].values\n",
+    "x_test = test.drop(outcome_label,axis=1).values\n",
+    "y_test = test[outcome_label].values\n",
     "del test #memory cleanup\n",
     "\n",
     "proba = model.predict_proba(x_test)[:,1]\n",
