--- a/UsefulNotebooks/DecisionThreshold_TrainEval.ipynb
+++ b/UsefulNotebooks/DecisionThreshold_TrainEval.ipynb
@@ -156,7 +156,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "# Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "sig_cutoff =float(metadata['Statistical Significance Cutoff'])\n",
@@ -450,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def doPlotPRC(result_table,colors,full_path,data_name,instance_label,class_label):\n",
+    "def doPlotPRC(result_table,colors,full_path,data_name,instance_label,outcome_label):\n",
     "    \"\"\" Generate PRC plot comparing average ML algorithm performance (over all CV training/testing sets)\"\"\"\n",
     "    count = 0\n",
     "    #Plot curves for each individual ML algorithm\n",
@@ -461,7 +461,7 @@
     "    test = pd.read_csv(full_path+'/CVDatasets/'+data_name+'_CV_0_Train.csv')\n",
     "    if instance_label != 'None':\n",
     "        test = test.drop(instance_label, axis=1)\n",
-    "    testY = test[class_label].values\n",
+    "    testY = test[outcome_label].values\n",
     "    noskill = len(testY[testY == 1]) / len(testY)  # Fraction of cases\n",
     "    # Plot no-skill line\n",
     "    plt.plot([0, 1], [noskill, noskill], color='orange', linestyle='--',label='No-Skill', alpha=.8)\n",
@@ -1514,8 +1514,8 @@
     "            train = pd.read_csv(train_file_path)\n",
     "            if instance_label != 'None':\n",
     "                train = train.drop(instance_label,axis=1)\n",
-    "            trainX = train.drop(class_label,axis=1).values\n",
-    "            trainY = train[class_label].values\n",
+    "            trainX = train.drop(outcome_label,axis=1).values\n",
+    "            trainY = train[outcome_label].values\n",
     "            del train #memory cleanup\n",
     "            \n",
     "            #Load pickled metric file for given algorithm and cv\n",
@@ -1615,7 +1615,7 @@
     "                plt.plot(alg_result_table[i][4], alg_result_table[i][3], lw=1, alpha=0.3, label='PRC fold %d (AUC = %0.3f)' % (i, alg_result_table[i][5]))\n",
     "            #Estimate no skill line based on the fraction of cases found in the first test dataset\n",
     "            test = pd.read_csv(full_path + '/CVDatasets/' + each + '_CV_0_Train.csv') #Technically there could be a unique no-skill line for each CV dataset based on final class balance (however only one is needed, and stratified CV attempts to keep partitions with similar/same class balance)\n",
-    "            testY = test[class_label].values\n",
+    "            testY = test[outcome_label].values\n",
     "            noskill = len(testY[testY == 1]) / len(testY)  # Fraction of cases\n",
     "            # Plot no-skill line\n",
     "            plt.plot([0, 1], [noskill, noskill], color='orange', linestyle='--', label='No-Skill', alpha=.8)\n",
@@ -1661,7 +1661,7 @@
     "    \n",
     "    #Plot ROC and PRC curves comparing average ML algorithm performance (averaged over all CVs)\n",
     "    doPlotROC(result_table,colors,full_path)\n",
-    "    doPlotPRC(result_table,colors,full_path,each,instance_label,class_label)\n",
+    "    doPlotPRC(result_table,colors,full_path,each,instance_label,outcome_label)\n",
     "    \n",
     "    #Save metric means and standard deviations\n",
     "    saveMetricMeans(full_path,my_metrics,metric_dict,name_modifier)\n",
