--- a/UsefulNotebooks/GenPlots_CompositeFI.ipynb
+++ b/UsefulNotebooks/GenPlots_CompositeFI.ipynb
@@ -147,7 +147,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "# Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "\n",
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def primaryStats(algorithms, original_headers, cv_partitions, full_path, data_name, instance_label, class_label, abbrev):\n",
+    "def primaryStats(algorithms, original_headers, cv_partitions, full_path, data_name, instance_label, outcome_label, abbrev):\n",
     "    \"\"\"\n",
     "    Combine classification metrics and model feature importance scores\n",
     "    \"\"\"\n",
@@ -246,7 +246,7 @@
     "            headers = pd.read_csv(full_path + '/CVDatasets/' + data_name + '_CV_' + str(cvCount) + '_Test.csv').columns.values.tolist()\n",
     "            if instance_label != None:\n",
     "                headers.remove(instance_label)\n",
-    "            headers.remove(class_label)\n",
+    "            headers.remove(outcome_label)\n",
     "            for each in original_headers:\n",
     "                if each in headers:  # Check if current feature from original dataset was in the partition\n",
     "                    # Deal with features not being in original order (find index of current feature list.index()\n",
@@ -692,7 +692,7 @@
     "    #Create folder for tree vizualization files\n",
     "    original_headers = pd.read_csv(full_path+\"/exploratory/ProcessedFeatureNames.csv\",sep=',').columns.values.tolist() #Get Original Headers\n",
     "    \n",
-    "    metric_dict = primaryStats(algorithms,original_headers,cv_partitions,full_path,each,instance_label,class_label,abbrev)\n",
+    "    metric_dict = primaryStats(algorithms,original_headers,cv_partitions,full_path,each,instance_label,outcome_label,abbrev)\n",
     "\n",
     "    #Prepare for feature importance visualizations\n",
     "    fi_df_list,fi_ave_norm_list,ave_metric_list,all_feature_list,non_zero_union_features,non_zero_union_indexes = prepFI(algorithms,full_path,abbrev,metric_dict,metric_weight,fi_ranking,fi_weighting)\n",
