--- a/UsefulNotebooks/GenPlots_ROC_PRC.ipynb
+++ b/UsefulNotebooks/GenPlots_ROC_PRC.ipynb
@@ -142,7 +142,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "# Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "\n",
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def primaryStats(algorithms,original_headers,cv_partitions,full_path,data_name,instance_label,class_label,abbrev,colors,plot_ROC,plot_PRC,name_modifier,legend_inside_plot):\n",
+    "def primaryStats(algorithms,original_headers,cv_partitions,full_path,data_name,instance_label,outcome_label,abbrev,colors,plot_ROC,plot_PRC,name_modifier,legend_inside_plot):\n",
     "    \"\"\" Combine classification metrics and model feature importance scores\"\"\"\n",
     "    result_table = []\n",
     "    metric_dict = {}\n",
@@ -294,7 +294,7 @@
     "                plt.plot(alg_result_table[i][4], alg_result_table[i][3], lw=1, alpha=0.3, label='PRC fold %d (AUC = %0.3f)' % (i, alg_result_table[i][5]))\n",
     "            #Estimate no skill line based on the fraction of cases found in the first test dataset\n",
     "            test = pd.read_csv(full_path + '/CVDatasets/' + data_name + '_CV_0_Test.csv') #Technically there could be a unique no-skill line for each CV dataset based on final class balance (however only one is needed, and stratified CV attempts to keep partitions with similar/same class balance)\n",
-    "            testY = test[class_label].values\n",
+    "            testY = test[outcome_label].values\n",
     "            noskill = len(testY[testY == 1]) / len(testY)  # Fraction of cases\n",
     "            # Plot no-skill line\n",
     "            plt.plot([0, 1], [noskill, noskill], color='orange', linestyle='--', label='No-Skill', alpha=.8)\n",
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def doPlotPRC(result_table,colors,full_path,data_name,instance_label,class_label,name_modifier,legend_inside_plot):\n",
+    "def doPlotPRC(result_table,colors,full_path,data_name,instance_label,outcome_label,name_modifier,legend_inside_plot):\n",
     "    \"\"\" Generate PRC plot comparing average ML algorithm performance (over all CV training/testing sets)\"\"\"\n",
     "    count = 0\n",
     "    #Plot curves for each individual ML algorithm\n",
@@ -383,7 +383,7 @@
     "    test = pd.read_csv(full_path+'/CVDatasets/'+data_name+'_CV_0_Test.csv')\n",
     "    if instance_label != 'None':\n",
     "        test = test.drop(instance_label, axis=1)\n",
-    "    testY = test[class_label].values\n",
+    "    testY = test[outcome_label].values\n",
     "    noskill = len(testY[testY == 1]) / len(testY)  # Fraction of cases\n",
     "    # Plot no-skill line\n",
     "    plt.plot([0, 1], [noskill, noskill], color='orange', linestyle='--',label='No-Skill', alpha=.8)\n",
@@ -534,13 +534,13 @@
     "    #Create folder for tree vizualization files\n",
     "    original_headers = pd.read_csv(full_path+\"/exploratory/ProcessedFeatureNames.csv\",sep=',').columns.values.tolist() #Get Original Headers\n",
     "    \n",
-    "    result_table,metric_dict = primaryStats(algorithms,original_headers,cv_partitions,full_path,each,instance_label,class_label,abbrev,colors,plot_ROC,plot_PRC,name_modifier,legend_inside_plot)\n",
+    "    result_table,metric_dict = primaryStats(algorithms,original_headers,cv_partitions,full_path,each,instance_label,outcome_label,abbrev,colors,plot_ROC,plot_PRC,name_modifier,legend_inside_plot)\n",
     "\n",
     "    #Plot ROC and PRC curves comparing average ML algorithm performance (averaged over all CVs)\n",
     "    if plot_meta_ROC:\n",
     "        doPlotROC(result_table,colors,full_path,name_modifier,legend_inside_plot)\n",
     "    if plot_meta_PRC:\n",
-    "        doPlotPRC(result_table,colors,full_path,each,instance_label,class_label,name_modifier,legend_inside_plot)\n"
+    "        doPlotPRC(result_table,colors,full_path,each,instance_label,outcome_label,name_modifier,legend_inside_plot)\n"
    ]
   },
   {
