--- a/UsefulNotebooks/ModelViz_DT_GP.ipynb
+++ b/UsefulNotebooks/ModelViz_DT_GP.ipynb
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generateTreePlot(experiment_path,each,algorithm,cvCount,max_index,scale_data,class_label,instance_label,inverseScaling,targetMetric):\n",
+    "def generateTreePlot(experiment_path,each,algorithm,cvCount,max_index,scale_data,outcome_label,instance_label,inverseScaling,targetMetric):\n",
     "    \"\"\" Takes all steps to generate a single decision tree visualization (for a given original dataset/cv training model).\n",
     "    Includes option to inverse scale all feature values in tree decision boundaries (to their original value range, pre-scaling)\"\"\"\n",
     "    #Pickle load target model\n",
@@ -199,7 +199,7 @@
     "    cv_train_data = pd.read_csv(cv_train_path, na_values='NA', sep = \",\")\n",
     "    #Get List of features in cv dataset (if feature selection took place this may only include a subset of original training data features)\n",
     "    train_feature_list = list(cv_train_data.columns.values)\n",
-    "    train_feature_list.remove(class_label)\n",
+    "    train_feature_list.remove(outcome_label)\n",
     "    try:\n",
     "        train_feature_list.remove(instance_label)\n",
     "    except:\n",
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generateGPPlot(experiment_path,data_name,algorithm,cvCount,max_index,scale_data,class_label,instance_label,targetMetric):\n",
+    "def generateGPPlot(experiment_path,data_name,algorithm,cvCount,max_index,scale_data,outcome_label,instance_label,targetMetric):\n",
     "    \"\"\" Takes all steps to generate a single genetic programming tree. https://gplearn.readthedocs.io/en/stable/examples.html \"\"\"\n",
     "    #Pickle load target model\n",
     "    modelInfo = experiment_path+\"/\"+data_name+'/models/pickledModels/'+algorithm+'_'+str(cvCount)+'.pickle' #Corresponding pickle file name with scalingInfo\n",
@@ -287,7 +287,7 @@
     "file.close()\n",
     "\n",
     "#Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = metadata['CV Partitions']\n",
     "scale_data = metadata['Use Data Scaling']\n",
@@ -1961,7 +1961,7 @@
     "        print(str(metric_cv_list))\n",
     "        print(\"Best \"+str(targetMetric)+\": \"+str(max_value))\n",
     "        for cvCount in range(0,int(cv_partitions)):\n",
-    "            graph = generateTreePlot(experiment_path,each,algInfo['Decision Tree'][1],cvCount,max_index,scale_data,class_label,instance_label,inverseScaling,targetMetric)\n",
+    "            graph = generateTreePlot(experiment_path,each,algInfo['Decision Tree'][1],cvCount,max_index,scale_data,outcome_label,instance_label,inverseScaling,targetMetric)\n",
     "            print(\"---------------------------------------\")\n",
     "            print(each+\"- CV Dataset: \"+str(max_index))\n",
     "            print(\"---------------------------------------\")\n",
@@ -1983,7 +1983,7 @@
     "        print(str(metric_cv_list))\n",
     "        print(\"Best \"+str(targetMetric)+\": \"+str(max_value))\n",
     "        for cvCount in range(0,int(cv_partitions)):\n",
-    "            graph = generateGPPlot(experiment_path,each,algInfo['Genetic Programming'][1],cvCount,max_index,scale_data,class_label,instance_label,targetMetric)\n",
+    "            graph = generateGPPlot(experiment_path,each,algInfo['Genetic Programming'][1],cvCount,max_index,scale_data,outcome_label,instance_label,targetMetric)\n",
     "            print(\"---------------------------------------\")\n",
     "            print(each+\"- CV Dataset: \"+str(max_index))\n",
     "            print(\"---------------------------------------\")\n",
