--- a/UsefulNotebooks/PredictionProbs_Test_EvalMetricAccess.ipynb
+++ b/UsefulNotebooks/PredictionProbs_Test_EvalMetricAccess.ipynb
@@ -137,7 +137,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "# Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "\n",
@@ -724,7 +724,7 @@
     "            headers = pd.read_csv(full_path + '/CVDatasets/' + each + '_CV_' + str(cv_count) + '_Test.csv').columns.values.tolist()\n",
     "            if instance_label != None: \n",
     "                headers.remove(instance_label)\n",
-    "            headers.remove(class_label)\n",
+    "            headers.remove(outcome_label)\n",
     "            for feature in original_headers:\n",
     "                if feature in headers:  # Check if current feature from original dataset was in the partition\n",
     "                    # Deal with features not being in original order (find index of current feature list.index()\n",
@@ -1040,7 +1040,7 @@
     "            \n",
     "            #Load associated testing dataset\n",
     "            test_data = pd.read_csv(full_path + '/CVDatasets/'+each+'_CV_' + str(cv_count) + '_Test.csv')\n",
-    "            probas_summary = test_data[[class_label,instance_label]]\n",
+    "            probas_summary = test_data[[outcome_label,instance_label]]\n",
     "\n",
     "            #Separate pickled results\n",
     "            probas_ = results[9]\n",
