--- a/UsefulNotebooks/GenPlots_FI_Heatmap.ipynb
+++ b/UsefulNotebooks/GenPlots_FI_Heatmap.ipynb
@@ -143,7 +143,7 @@
     "remove_list = ['.DS_Store', 'metadata.pickle', 'metadata.csv', 'algInfo.pickle',\n",
     "                'DatasetComparisons', 'jobs', 'jobsCompleted', 'logs',\n",
     "                'KeyFileCopy', 'dask_logs',\n",
-    "                experiment_name + '_ML_Pipeline_Report.pdf']\n",
+    "                experiment_name + '_STREAMLINE_Report.pdf']\n",
     "for text in remove_list:\n",
     "    if text in datasets:\n",
     "        datasets.remove(text)\n",
